tests/EtaX/EtaX.methF0/EtaX.methF0.04.check
// src:   val t1e: Any       = methF0() _            // error: _ must follow method
// 2.13-base error
target/tests/EtaX/EtaX.methF0/EtaX.methF0.04.scala:13: error: _ must follow method; cannot follow () => String
  val t1e: Any       = methF0() _            // error: _ must follow method
                             ^
1 error

// 2.13-head error <no change>
// 2.13-new  error <no change>
// 3.0-old   warn
-- [E099] Syntax Migration Warning: target/tests/EtaX/EtaX.methF0/EtaX.methF0.04.scala:13:32 
13 |  val t1e: Any       = methF0() _            // error: _ must follow method
   |                       ^^^^^^^^^^
   |Only function types can be followed by _ but the current expression has type () => String

Explanation
===========
The syntax x _ is no longer supported if x is not a function.
To convert to a function value, you need to explicitly write () => x

1 warning found

// 3.0       error
-- [E099] Syntax Error: target/tests/EtaX/EtaX.methF0/EtaX.methF0.04.scala:13:32 
13 |  val t1e: Any       = methF0() _            // error: _ must follow method
   |                       ^^^^^^^^^^
   |Only function types can be followed by _ but the current expression has type () => String

Explanation
===========
The syntax x _ is no longer supported if x is not a function.
To convert to a function value, you need to explicitly write () => x

1 error found

// 3.1-migr  warn
-- [E099] Syntax Migration Warning: target/tests/EtaX/EtaX.methF0/EtaX.methF0.04.scala:13:32 
13 |  val t1e: Any       = methF0() _            // error: _ must follow method
   |                       ^^^^^^^^^^
   |Only function types can be followed by _ but the current expression has type () => String

Explanation
===========
The syntax x _ is no longer supported if x is not a function.
To convert to a function value, you need to explicitly write () => x

1 warning found

// 3.1       error
-- [E099] Syntax Error: target/tests/EtaX/EtaX.methF0/EtaX.methF0.04.scala:13:32 
13 |  val t1e: Any       = methF0() _            // error: _ must follow method
   |                       ^^^^^^^^^^
   |Only function types can be followed by _ but the current expression has type () => String

Explanation
===========
The syntax x _ is no longer supported if x is not a function.
To convert to a function value, you need to explicitly write () => x

1 error found


error error error warn  error warn  error
